# velgarien-rebuild

./: .dockerignore  .env.example  .env.production.example  .gitignore  .markdownlint-cli2.jsonc  .mcp.json  00_PROJECT_OVERVIEW.md  01_PLATFORM_ARCHITECTURE.md  03_DATABASE_SCHEMA_NEW.md  04_DOMAIN_MODELS.md  05_API_SPECIFICATION.md  06_FEATURE_CATALOG.md  07_FRONTEND_COMPONENTS.md  08_SIMULATION_SETTINGS.md  09_AI_INTEGRATION.md  10_AUTH_AND_SECURITY.md  11_EXTERNAL_SERVICES.md  12_DESIGN_SYSTEM.md  13_TECHSTACK_RECOMMENDATION.md  14_I18N_ARCHITECTURE.md  15_MIGRATION_STRATEGY.md  16_TESTING_STRATEGY.md  17_IMPLEMENTATION_PLAN.md  18_THEMING_SYSTEM.md  19_DEPLOYMENT_INFRASTRUCTURE.md  20_RELATIONSHIPS_ECHOES_MAP.md  21_EMBASSIES.md  22A_GAME_SYSTEMS.md  22B_EPOCHS_COMPETITIVE_LAYER.md  22_EPOCHS_COMPETITIVE_LAYER.md  22_GAME_SYSTEMS.md  23_MICROANIMATIONS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  GAME_DESIGN_DOCUMENT.md  README.md  _02_DATABASE_SCHEMA_LEGACY.md  biome.json  concept.md  (+2 more)
.claude/plans/: simulation_forge_concept.md
.github/workflows/: ci.yml  security.yml
backend/: app.py  config.py  dependencies.py  logging_config.py  requirements.txt
backend/middleware/: logging_context.py  rate_limit.py  security.py  seo.py
backend/models/: agent.py  aptitude.py  building.py  cleanup.py  common.py  embassy.py  epoch.py  epoch_chat.py  epoch_invitation.py  event.py  forge.py  game_mechanics.py  invitation.py  member.py  notification.py  resonance.py  settings.py  simulation.py  social_media.py  social_trend.py  taxonomy.py  user.py  zone_action.py
backend/routers/: admin.py  agent_professions.py  agents.py  aptitudes.py  buildings.py  campaigns.py  chat.py  echoes.py  embassies.py  epoch_chat.py  epoch_invitations.py  epochs.py  events.py  forge.py  game_mechanics.py  generation.py  health.py  invitations.py  locations.py  members.py  operatives.py  prompt_templates.py  public.py  resonances.py  scores.py  seo.py  simulations.py  social_media.py  social_trends.py  users.py  zone_actions.py
backend/services/: admin_user_service.py  agent_profession_service.py  agent_service.py  aptitude_service.py  audit_service.py  bot_service.py  (+48 more)
docs/: 00_PROJECT_OVERVIEW.md  01_PLATFORM_ARCHITECTURE.md  03_DATABASE_SCHEMA_NEW.md  04_DOMAIN_MODELS.md  05_API_SPECIFICATION.md  06_FEATURE_CATALOG.md  07_FRONTEND_COMPONENTS.md  09_AI_INTEGRATION.md  14_I18N_ARCHITECTURE.md  16_TESTING_STRATEGY.md  17_IMPLEMENTATION_PLAN.md  19_DEPLOYMENT_INFRASTRUCTURE.md  20_RELATIONSHIPS_ECHOES_MAP.md  21_EMBASSIES.md  22A_GAME_SYSTEMS.md  22B_EPOCHS_COMPETITIVE_LAYER.md  GAME_DESIGN_DOCUMENT.md  INDEX.md  PLAYTEST_METHODOLOGY.md  SIMULATION_BLUEPRINT.md  TCG_CARD_SYSTEM_DESIGN.md  concept.md  llms.txt
e2e/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/: index.html  lit-localize.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: epoch_sim_lib.py  epoch_statistical_analysis.py  generate-docs-index.mjs  generate_capybara_images.py  generate_dashboard_images.py  generate_embassy_images.py  generate_gaslit_reach_images.py  generate_lore_images.py  prerender.py
supabase/: config.toml
(+369 files in other folders)
