[project]
name = "velgarien-platform"
version = "2.0.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.41.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
    "pydantic-ai>=0.0.1",
    "supabase>=2.10.0",
    "httpx>=0.28.0",
    "Pillow>=12.0.0",
    "cryptography>=46.0.0",
    "PyJWT[crypto]>=2.11.0",
    "python-dotenv>=1.2.0",
    "python-multipart>=0.0.22",
    "slowapi>=0.1.9",
    "replicate>=1.0.7",
    "cachetools>=7.0.0",
    "tavily-python>=0.5.0",
    "structlog>=25.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.0",
    "ruff>=0.15.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "T20", "ICN"]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**/*.py" = ["S101", "S105", "S106", "E501"]
"backend/models/common.py" = ["UP046"]
"backend/app.py" = ["E402"]  # setup_logging() must run before other imports
"backend/routers/**/*.py" = ["B008"]
"backend/dependencies.py" = ["B008"]
"backend/services/**/*.py" = ["A003"]
"backend/services/email_templates.py" = ["A003", "E501"]
"scripts/**/*.py" = ["T201", "E402"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
markers = [
    "integration: Integration tests requiring app instantiation but not external services",
    "slow: Performance tests that may take several seconds",
]
